--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://naraeseoWeb.github.io/nomad-to-do-list",
+  "homepage": "https://naraeseoWeb.github.io/nomad-todo-list",
   "devDependencies": {
     "@types/styled-components": "^5.1.26"
   }
